--- a/SuggestingTitleOfArticle.ipynb
+++ b/SuggestingTitleOfArticle.ipynb
@@ -40,22 +40,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "1NY4T7WNxppG",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "aI3B6vPlWeJu",
         "colab_type": "code",
-        "outputId": "84142352-13c0-4399-93d1-e4cb792357a9",
+        "outputId": "4d98678b-e526-4716-d090-6248ab6ebf65",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 122
@@ -65,7 +52,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -112,7 +99,7 @@
       "metadata": {
         "id": "e3byqwHsgWgB",
         "colab_type": "code",
-        "outputId": "e206daf1-20cc-4f51-c95d-202db5225ad9",
+        "outputId": "dbb92e3f-9c58-4661-a334-6034953def41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -122,7 +109,7 @@
         "df.head()\n",
         "\n"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -209,7 +196,7 @@
       "metadata": {
         "id": "iRUqhBn8MgCc",
         "colab_type": "code",
-        "outputId": "ee7a9366-4e6f-4c19-9763-5179031c2cdf",
+        "outputId": "024c07de-ba9d-4c96-de8f-0083ac47449a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
@@ -222,7 +209,7 @@
         "\n",
         "subdf"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -295,39 +282,14 @@
       "metadata": {
         "id": "yF2zUxZMC74p",
         "colab_type": "code",
-        "outputId": "523f88fa-df68-4298-ce86-01bf72415f13",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        }
+        "colab": {}
       },
       "source": [
         "import nltk\n",
         "nltk.download('punkt')"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -339,7 +301,6 @@
       "source": [
         "\n",
         "\n",
-        "from nltk.tokenize import sent_tokenize\n",
         "#tokenized_sent = sent_tokenize(subdf.loc[0, \"content\"])\n",
         "#for i in range(0,10):\n",
         " # print(i+1, tokenized_sent[i]) # Some tokenization issues see sentence 9 below\n",
@@ -354,72 +315,95 @@
       "metadata": {
         "id": "PftVQIlRpoI3",
         "colab_type": "code",
-        "outputId": "f1f18768-9395-45d1-b3fd-63264c02ea54",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 85
-        }
+        "colab": {}
       },
       "source": [
+        "from nltk.tokenize import sent_tokenize\n",
         "# using apply to apply sent_tokenize function on entire content column, the result is an array of sentences\n",
-        "result = subdf[\"content\"].apply(sent_tokenize) \n",
-        "result\n"
+        "#result = subdf[\"content\"].apply(sent_tokenize) \n",
+        "new_sent =[]\n",
+        "for row in subdf.itertuples():\n",
+        "    for sent in sent_tokenize(row[1]):\n",
+        "        new_sent.append((sent, row[2]))\n",
+        "df_new = pd.DataFrame(new_sent, columns = ['tokenized_sent', 'ID'])"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "0    [This was the year that felt like 50 years., W...\n",
-              "1    [Gary Vaynerchuk once told a 20 year old Taylo...\n",
-              "2    [On this episode of Recode Decode, hosted by K...\n",
-              "Name: content, dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "ocuQVj_nTQqH",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 142
+        },
+        "outputId": "3a3df656-349b-4b70-83ca-e5601c7c5709"
       },
       "source": [
-        "subdf.set_index(['id', 'title'])\n",
-        "result = subdf.stack()\n",
-        "result.str.split('. ', expand=True)"
+        "df_new.tail(3)"
       ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "n3pXd9T2m6mz",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "-L_WDihcm78Z",
-        "colab_type": "text"
-      },
-      "source": [
-        ""
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>tokenized_sent</th>\n",
+              "      <th>ID</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>1335</th>\n",
+              "      <td>Thank you for having me, it was a lot of fun.</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1336</th>\n",
+              "      <td>KS: Thanks for coming on the show and you’re f...</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1337</th>\n",
+              "      <td>CN: No, it was my pleasure.</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                                         tokenized_sent  ID\n",
+              "1335      Thank you for having me, it was a lot of fun.   3\n",
+              "1336  KS: Thanks for coming on the show and you’re f...   3\n",
+              "1337                        CN: No, it was my pleasure.   3"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
       ]
     }
   ]
