--- a/SuggestingTitleOfArticle.ipynb
+++ b/SuggestingTitleOfArticle.ipynb
@@ -42,26 +42,22 @@
       "metadata": {
         "id": "aI3B6vPlWeJu",
         "colab_type": "code",
-        "outputId": "4d98678b-e526-4716-d090-6248ab6ebf65",
+        "outputId": "7d7e740d-2d5e-4403-f0b1-c5c433e8e6b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 122
+          "height": 34
         }
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
-      "execution_count": 1,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3Aietf%3Awg%3Aoauth%3A2.0%3Aoob&scope=email%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdocs.test%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fdrive.photos.readonly%20https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fpeopleapi.readonly&response_type=code\n",
-            "\n",
-            "Enter your authorization code:\n",
-            "··········\n",
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -99,7 +95,7 @@
       "metadata": {
         "id": "e3byqwHsgWgB",
         "colab_type": "code",
-        "outputId": "dbb92e3f-9c58-4661-a334-6034953def41",
+        "outputId": "65330a83-1b71-451b-f59e-7491a8fc2edc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -109,7 +105,7 @@
         "df.head()\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -187,7 +183,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 18
         }
       ]
     },
@@ -196,100 +192,56 @@
       "metadata": {
         "id": "iRUqhBn8MgCc",
         "colab_type": "code",
-        "outputId": "024c07de-ba9d-4c96-de8f-0083ac47449a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 142
-        }
+        "colab": {}
       },
       "source": [
         "#df.loc[0,\"content\"] # accessing first column, first row\n",
         "#df.iloc[0,0]# accessing first column, second row \n",
-        "subdf = df.head(3)\n",
+        "#subdf = df.head(3)\n",
         "\n",
-        "subdf"
+        "#subdf"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>content</th>\n",
-              "      <th>id</th>\n",
-              "      <th>title</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>This was the year that felt like 50 years. We ...</td>\n",
-              "      <td>1</td>\n",
-              "      <td>21 Stories Our Readers Loved in 2017</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>Gary Vaynerchuk once told a 20 year old Taylor...</td>\n",
-              "      <td>2</td>\n",
-              "      <td>What To Do After Graduating College</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>On this episode of Recode Decode, hosted by Ka...</td>\n",
-              "      <td>3</td>\n",
-              "      <td>Full transcript: Former Groupon CEO Andrew Mas...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                             content  ...                                              title\n",
-              "0  This was the year that felt like 50 years. We ...  ...               21 Stories Our Readers Loved in 2017\n",
-              "1  Gary Vaynerchuk once told a 20 year old Taylor...  ...                What To Do After Graduating College\n",
-              "2  On this episode of Recode Decode, hosted by Ka...  ...  Full transcript: Former Groupon CEO Andrew Mas...\n",
-              "\n",
-              "[3 rows x 3 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "yF2zUxZMC74p",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 68
+        },
+        "outputId": "833d01e6-b907-4e77-ee06-d4aa07ed6f5f"
       },
       "source": [
         "import nltk\n",
         "nltk.download('punkt')"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -322,7 +274,7 @@
         "# using apply to apply sent_tokenize function on entire content column, the result is an array of sentences\n",
         "#result = subdf[\"content\"].apply(sent_tokenize) \n",
         "new_sent =[]\n",
-        "for row in subdf.itertuples():\n",
+        "for row in df.itertuples():\n",
         "    for sent in sent_tokenize(row[1]):\n",
         "        new_sent.append((sent, row[2]))\n",
         "df_new = pd.DataFrame(new_sent, columns = ['tokenized_sent', 'ID'])"
@@ -335,16 +287,16 @@
       "metadata": {
         "id": "ocuQVj_nTQqH",
         "colab_type": "code",
+        "outputId": "07239681-f096-4389-87fe-b5d3d3d515fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 142
-        },
-        "outputId": "3a3df656-349b-4b70-83ca-e5601c7c5709"
+        }
       },
       "source": [
         "df_new.tail(3)"
       ],
-      "execution_count": 16,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -374,35 +326,35 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>1335</th>\n",
-              "      <td>Thank you for having me, it was a lot of fun.</td>\n",
-              "      <td>3</td>\n",
+              "      <th>2992308</th>\n",
+              "      <td>It's taken him a long time to figure it out, b...</td>\n",
+              "      <td>145821</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1336</th>\n",
-              "      <td>KS: Thanks for coming on the show and you’re f...</td>\n",
-              "      <td>3</td>\n",
+              "      <th>2992309</th>\n",
+              "      <td>Others, including Egypt, sent their foreign mi...</td>\n",
+              "      <td>145821</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>1337</th>\n",
-              "      <td>CN: No, it was my pleasure.</td>\n",
-              "      <td>3</td>\n",
+              "      <th>2992310</th>\n",
+              "      <td>This is one story that the US President can't ...</td>\n",
+              "      <td>145821</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                         tokenized_sent  ID\n",
-              "1335      Thank you for having me, it was a lot of fun.   3\n",
-              "1336  KS: Thanks for coming on the show and you’re f...   3\n",
-              "1337                        CN: No, it was my pleasure.   3"
+              "                                            tokenized_sent      ID\n",
+              "2992308  It's taken him a long time to figure it out, b...  145821\n",
+              "2992309  Others, including Egypt, sent their foreign mi...  145821\n",
+              "2992310  This is one story that the US President can't ...  145821"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 21
         }
       ]
     }
